chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@julusian/jpeg-turbo",
-  "version": "0.5.4-0",
+  "version": "0.5.4",
   "description": "Limited libjpeg-turbo bindings for Node.js.",
   "keywords": [
     "jpeg",
