--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,20 +19,25 @@ endif()
 include_directories(${CMAKE_JS_INC})
 
 set(HEADER_FILES
-        "src/enums.h"
-    )
+  "src/buffersize.h"
+  "src/compress.h"
+  "src/consts.h"
+  "src/decompress.h"
+  "src/enums.h"
+  "src/util.h"
+)
 set(SOURCE_FILES
-        "src/buffersize.cc"
-        "src/compress.cc"
-        "src/decompress.cc"
-        "src/enums.cc"
-        "src/util.cc"
-        "src/exports.cc"
-    )
+  "src/buffersize.cc"
+  "src/compress.cc"
+  "src/decompress.cc"
+  "src/enums.cc"
+  "src/util.cc"
+  "src/exports.cc"
+)
 
 add_subdirectory("deps/libjpeg-turbo")
 
-add_library(${PROJECT_NAME} MODULE ${SOURCE_FILES} ${HEADER_FILES} ${CMAKE_JS_SRC})
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${CMAKE_JS_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
 target_include_directories(${PROJECT_NAME} PRIVATE "deps/libjpeg-turbo")
 target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} turbojpeg-static)
