--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,7 @@ jobs:
         run: |
           mkdir c:\yasm
           curl -o "c:\yasm\yasm.exe" http://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe
-          echo "c:\yasm" >> $GITHUB_PATH
+          echo "c:\yasm" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: Install macOS dependencies
         if: runner.os == 'macOS'
         run: |
