--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   "types": "./module.d.ts",
   "dependencies": {
     "bindings": "^1.5.0",
-    "cmake-js": "^6.2.1",
+    "cmake-js": "^6.3.0",
     "node-addon-api": "^3.2.1",
-    "prebuild-install": "^6.1.3"
+    "prebuild-install": "^7.0.1"
   },
   "scripts": {
+    "rebuild": "cmake-js compile --target jpegturbo",
     "install": "prebuild-install -r napi || cmake-js compile --target jpegturbo",
     "prebuild": "prebuild -r napi --all --verbose --backend cmake-js -- --target jpegturbo",
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "prebuild": "^10.0.0"
+    "jest": "^27.5.1",
+    "prebuild": "^11.0.3"
   }
 }
